# PolicyAsCodeMaintenance

./: .gitignore  README  pyproject.toml  requirements.txt  tar.sh
PolicyAsCodeMaintenance/: __init__.py  cochanged_file_analysis.py  data_aggreagate.py  data_collect.py  data_validate.py  get_statistics.py  p1_data_collect.py  p2_data_validate.py  p3_quantitative_analysis.py  p4_qualitative_analysis.py  qualitative_analysis.py  quantitative_analysis.py
PolicyAsCodeMaintenance/modules/: config.py  file_controller.py  git_controller.py  pac_analyzer.py  repository_manager.py
inputs/: files.csv  repos-full-test.csv  repos-full.csv  repos.csv
