[project]
name = "policyascodemaintenance"
version = "0.1.0"
description = ""
authors = [
    {name = "Yutaro Kashiwa",email = "kashiwa.yutaro@g.wakayama-u.jp"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf (>=4.21.12)",
    "setuptools (>=68.2.2)",
    "requests (>=2.31.0)",
    "aiohttp (==3.9.3)",
    "packaging (>=23.1)",
    "urllib3 (>=1.26.2)",
    "pyjwt (>=2.8.0)",
    "python-dateutil (>=2.8.1)",
    "pandas (>=2.0.0)",
    "pygithub (>=2.2.0)",
    "pyparsing (>=3.0.9)",
    "pytz (>=2023.3)",
    "cryptography (>=42.0.5)",
    "configparser (>=6.0.0)",
    "numpy (>=1.25.0)",
    "gitpython (>=3.1.17)",
    "six (>=1.15.0)",
    "matplotlib (>=3.7.2)",
    "pygit2 (>=1.12.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
